tdf#165359 writerfilter: import graphic into richText, not plainText

This patch replaces the previous one.
It is more generic

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf165359_SdtWithDrawing
make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf165359_SdtWithInline

Change-Id: Ic1533a71fbaaaa4e28e7e00976f5c8f747cf2d6b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198049
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>